# colorize-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: colorize.rs  lib.rs
tests/: color_test.rs
