[package]
name = "colorize-rs"
version = "0.1.0"
authors = ["MOBSkuchen"]
description = "Simple terminal text colorisation using ansi characters"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MOBSkuchen/colorize"
repository = "https://github.com/MOBSkuchen/colorize"
edition = "2021"